# fava-income-reports

./: flake.nix  pyproject.toml
